lox-tests/tests/inheritance/parenthesized_superclass.stderr
ERROR: Expected superclass name after '<'
 --> 4:11
  |
4 | class Bar < (Foo) {}
  |           ^-^
